Fix numbered lists on firefox

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -95,6 +95,7 @@ body {
   }
 
   ol {
+    list-style: decimal;
     margin-left: 2em;
   }
 }
